k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: exercise-python-application-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: exercise-python-application
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
