k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: exercise.python.application.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exercise-python-application-service
                port:
                  number: 80
  tls:
    - hosts:
        - exercise.python.application.com
      secretName: my-tls-secret
